kubernetes/apps/cloud/memos/app/grpcroute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: memos-grpc
  namespace: cloud
  annotations:
spec:
  hostnames:
    - memos.tosih.org
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - matches:
        - method:
            service: memos.api.v1.AuthService
      backendRefs:
        - name: memos
          port: 10001
    - matches:
        - method:
            service: memos.api.v1.WorkspaceService
      backendRefs:
        - name: memos
          port: 10001
    - backendRefs:
        - name: memos
          port: 10001
